# python

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CNAME  CONTRIBUTING.md  Gemfile  KICAD.md  README.md  TODO.md  TODO2.md  TODO3.md  _config.yml  argparse  enhanced_schematic.mmd  gitinit.sh  index.html  index.md  light_colors.txt  math  pyproject.toml  run.bat  run.py  run.sh  sch2svg.py  sch2svg2.py  schematic.mmd  twinizer.python.gemspec
.github/: FUNDING.yml
.github/workflows/: jekyll-gh-pages.yml  jekyll.yml  python-package.yml
docs/: _config.yml  code_analysis.md  contributing_guide.md  hardware_analysis.md  image_processing.md  kicad_docker.md  pdf_to_markdown.md  user_guide.md
docs/examples/: comprehensive_report.md
docs/programator/: programator_2025_analysis.md  programator_2025_hardware_analysis.md  programator_2025_software_analysis.md
docs/twinizer/: twinizer_analysis.md  twinizer_hardware_analysis.md  twinizer_software_analysis.md
examples/: README.md  image_to_3d.py  image_to_ascii.py  kicad_docker_conversion.py  kicad_parsing.py  pdf_to_markdown.py  software_analysis.py
scripts/: gitinit.sh  install_kicad.py
src/twinizer/: __init__.py  __main__.py
src/twinizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/twinizer/cli/: __init__.py  main.py  shell.py
src/twinizer/code_analyzer/: __init__.py  analyzer.py
src/twinizer/converters/: bin2source.py  image2ascii.py  kicad2image.py  pdf2md.py
src/twinizer/core/: project.py
src/twinizer/hardware/: altium.py  gerber.py  (+1 more)
tests/: __init__.py  run_tests.py  test_cli.py  test_env.py  test_pdf2md.py  test_project.py
update/: 1versions.py  README.md  changelog.py  code.sh  config.py  duplicated.py  duplicated.sh  env_manager.py  git.sh  package.sh  pypi.sh  requirements.py  src.py  test.sh  test_code.py  upgrade.sh  version.sh
update/pl/: readme.md
(+58 files in other folders)
